Accessibility - ScrollToTop button invisible : Made the ScrollToTop button always visible (deleted opacity=0 when up in the page) to avoid accessibility problems (focus on an invisible element)

--- a/style-purify.css
+++ b/style-purify.css
@@ -437,7 +437,6 @@ button {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  opacity: 0;
   z-index: 500;
   transition: all .3s ease-in-out;
 }
@@ -457,7 +456,6 @@ button {
 
 .showScrollTop {
   font-size: 14px;
-  opacity: 1;
 }
 
 a[data-lightbox] {
