--- a/style.css
+++ b/style.css
@@ -569,7 +569,6 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
@@ -589,7 +588,6 @@ button {
 
 .showScrollTop {
     font-size: 14px;
-    opacity: 1;
 }
 
 a[data-lightbox] {
